--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
 h1 {
     color: #0472f0;
-    font-size: 35px;
-    font-weight: 100;
+    font-size: 45px;
     line-height: 28px;
-    text-align: center;
+    text-align: left;
+}
+ul {
+    font-size: 25px;
+}
+li {
+    font-size: 25px;
+}
+img {
+    display: block;
+    margin: 0 auto;
+    width: 300px;
+    float: left;
+   
 }
