--- a/style.css
+++ b/style.css
@@ -1,19 +1,39 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
     color: #0472f0;
-    font-size: 45px;
+    font-size: 35px;  
+    font-weight: 100;
     line-height: 28px;
-    text-align: left;
+    margin-top: 10px;
 }
+
 ul {
-    font-size: 25px;
+    margin: 0;
+    padding: 0;
 }
+
 li {
-    font-size: 25px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    color: red;
+    font-size: 15px;
+    font-weight: 100;
 }
 img {
     display: block;
     margin: 0 auto;
-    width: 300px;
+    width: 200px;
     float: left;
-   
+}
+
+.weather-app {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 15px 40px;
+    border: 3px solid black;
+    border-radius: 20px;
 }
