--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
     font-size: 35px;  
     font-weight: 100;
     line-height: 28px;
-    margin-top: 10px;
+    margin-bottom: 0;
 }
 
 ul {
@@ -19,21 +19,66 @@ li {
     list-style: none;
     margin: 0;
     padding: 0;
-    color: red;
+    color: black;
     font-size: 15px;
     font-weight: 100;
+    line-height: 19px;
 }
-img {
-    display: block;
-    margin: 0 auto;
-    width: 200px;
-    float: left;
+li:first-letter {
+    text-transform: capitalize;
 }
-
-.weather-app {
+.weather-app-wrapper {
     max-width: 600px;
-    margin: 50px auto;
-    padding: 15px 40px;
-    border: 3px solid black;
-    border-radius: 20px;
+    margin: 30px auto;
 }
+.weather-app {
+    padding: 20px;
+    border: 1px solid rgb(236, 5, 236);
+    border-radius: 5px;
+}
+.overview {
+    margin-bottom: 20px;
+}
+.weather-temperature img {
+    margin-right: 5px;
+    height: 64px;
+    width: 64px;
+}
+.weather-temperature strong {
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    line-height: 1;
+    font-weight: 400;
+}
+.weather-temperature .units {
+    position: relative;
+    font-size: 16px;
+    top: -34px;
+}
+.weather-temperature .active {
+    color: rgb(33, 33, 33);
+    cursor: default;
+  }
+  
+  .weather-temperature .active:hover {
+    text-decoration: none;
+  }
+  
+  .weather-forecast {
+    margin-top: 20px;
+    text-align: center;
+    color: #000;
+  }
+  
+  .weather-forecast-date {
+    font-size: 16px;
+    opacity: 0.5;
+  }
+  
+  .weather-forecast-temperature-min {
+    opacity: 0.5;
+  }
+  
+  .weather-forecast-temperatures {
+    font-size: 13px;
+  }
