--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ li:first-letter {
 }
 .weather-temperature .active {
     color: rgb(33, 33, 33);
-    cursor: default;
+    cursor: pointer;
   }
   
   .weather-temperature .active:hover {
