--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color:cyan;
 }
-
 h1 {
     color: #0472f0;
     font-size: 35px;  
@@ -9,13 +9,11 @@ h1 {
     line-height: 28px;
     margin-bottom: 0;
 }
-
 ul {
     margin: 0;
     padding: 0;
     color: green;
 }
-
 li {
     list-style: none;
     margin: 0;
@@ -34,7 +32,6 @@ li:first-letter {
 }
 .weather-app {
     padding: 20px;
-    border: 1px solid rgb(236, 5, 236);
     border-radius: 5px;
 }
 .overview {
@@ -59,28 +56,22 @@ li:first-letter {
 .weather-temperature .active {
     color: blueviolet;
     cursor: pointer;
-  }
-  
-  .weather-temperature .active:hover {
+}
+.weather-temperature .active:hover {
     text-decoration: none;
-  }
-  
-  .weather-forecast {
+}  
+.weather-forecast {
     margin-top: 20px;
     text-align: center;
     color: lightskyblue;
-  }
-  
-  .weather-forecast-date {
+} 
+.weather-forecast-date {
     font-size: 16px;
     opacity: 0.5;
-  }
-  
-  .weather-forecast-temperature-min {
+} 
+.weather-forecast-temperature-min {
     opacity: 0.5;
-  }
-  
-  .weather-forecast-temperatures {
+}
+.weather-forecast-temperatures {
     font-size: 13px;
-  }
-  
+}  
