--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color:cyan;
+    background-color:rgb(2, 248, 248);
 }
 h1 {
     color: #0472f0;
-    font-size: 35px;  
+    font-size: 45px;  
     font-weight: 100;
     line-height: 28px;
-    margin-bottom: 0;
+    margin-bottom: 20px;
+    font-weight: 300;
 }
 ul {
     margin: 0;
     padding: 0;
-    color: green;
+    color: fuchsia;
 }
 li {
     list-style: none;
@@ -43,7 +44,7 @@ li:first-letter {
     width: 64px;
 }
 .weather-temperature strong {
-    color: orangered;
+    color: #0472f0;
     font-size: 64px;
     line-height: 1;
     font-weight: 400;
@@ -63,7 +64,7 @@ li:first-letter {
 .weather-forecast {
     margin-top: 20px;
     text-align: center;
-    color: lightskyblue;
+    color: black;
 } 
 .weather-forecast-date {
     font-size: 16px;
