--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@ body {
 }
 h1 {
     color: #0472f0;
-    font-size: 45px;  
-    font-weight: 100;
+    font-size: 60px;  
+    font-weight: 200;
     line-height: 28px;
     margin-bottom: 20px;
     font-weight: 300;
 }
 ul {
-    margin: 0;
+    margin: 10px 10px;
     padding: 0;
     color: fuchsia;
 }
@@ -23,6 +23,13 @@ li {
     font-size: 15px;
     font-weight: 100;
     line-height: 19px;
+}
+img {
+    width: 17%;
+    display: block;
+    margin: 0 auto;
+    
+
 }
 li:first-letter {
     text-transform: capitalize;
